added client tracking to this branch of big help

--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -48,7 +48,7 @@
   </fieldset>
   
   <fieldset>
-    <legend>Details</legend>
+    <legend>Details (optional)</legend>
     <p class="tip">Details help us diagnose your problem faster. When appropriate, please let us know your operating system, 
       web browser, email client, and steps required to reproduce your problem.</p>
     <p>
