--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 	<title><%= AppConfig['company_name'] %></title>
-	
+	<%= stylesheet_link_tag 'reset' %>
+	<%= stylesheet_link_tag 'text' %>
+	<%= stylesheet_link_tag '960' %>
 	<%= stylesheet_link_tag 'bighelp' %>
 	<%= stylesheet_link_tag 'facebox' %>
 	<%= javascript_include_tag :defaults %>
@@ -15,6 +17,7 @@
 	<script type="text/javascript">
     jQuery(document).ready(function($) {
       $('a[rel*=facebox]').facebox({loading_image:'loading.gif',close_image:'closelabel.gif'});
+      <%= yield :onload %>
     })
     
     function show_find() {
@@ -38,10 +41,9 @@
 </head>
 
 <body id="help">
-
-<div id="container">
-  <div id="header">
-    <div id="nav">
+  
+  <div id="header" class="container_12">
+    <div id="nav" class="grid_12">
       <ul>
         <% AppConfig['nav_links'].each do |link| %>
           <% link.each do |key, value| %>
@@ -49,63 +51,68 @@
           <% end %>
         <% end %>
       </ul>
-      <% if current_user %>
+      <h1><%= link_to image_tag('logo.png'), root_url %></h1>
+    </div>
+    <div class="clear"></div>
+    <% if current_user %>
+    <div class="grid_12">
       <ul>
         <li><%= link_to "categories", categories_url %></li>
         <li><%= link_to "profile", profile_url %></li>
         <li><%= link_to "log out", logout_url %></li>
       </ul>
-      <% end %>
-    </div>    
-    <h1><%= link_to image_tag('logo.jpg'), root_url %></h1>
-  </div>
-  
-  <%= yield :main %>
-  
-  <div id="right">
-    
-    <ul id="big">
-      <li><%= link_to "New ticket", new_ticket_url, :class=>"big_ticket" %></li>
-      <li><%= link_to "Contact us", AppConfig['contact'], :class=>"big_contact" %></li>
-      <li><span id="find_label"><a href="javascript:;" onclick="show_find()" class="big_find">Find your ticket</a></span></li>
-      <% if current_user %>
-      <li><%= link_to "Fresh tickets", fresh_tickets_url, :class=>"big_fresh" %></li>
-      <li><%= link_to "Active tickets", active_tickets_url, :class=>"big_active" %></li>
-      <li><%= link_to "All tickets", tickets_url, :class=>"big_all" %></li>
-      <li><span id="search_label"><a href="#" onclick="show_search()" class="big_search">Search tickets</a></span>
-          <span id="search_form"><% form_tag(tickets_url, {:method => 'get'}) do %>
-            <%= label :q, 'Search phrase' %>
-            <%= text_field_tag :q, 'Key / Name / Email', :size => 20 %>
-            
-            <%= label :start_on, 'Date range' %>
-        	  <%= text_field_tag :start_on, h(params[:start_on]), :size=>10 %> to 
-        	  <%= text_field_tag :end_on, h(params[:end_on]), :size=>10 %>
-        	  
-        	  <p><%= submit_tag "Search" %></p>
-            <% end %></span></li>
-      <% end %>
-    </ul>
-    <div id="find_form"><% form_tag(key_search_url, {:method => 'get'}) do %>
-      <%= text_field_tag :key, 'Ticket key', :size => 10 %>
-      <% end %>
     </div>
-    
-    
-    
-  </div>
-  <div id="left">
-    <%= yield %>
+    <div class="clear"></div>
+    <% end %>
   </div>
   
+  <div id="main" class="container_12">  
+    <div id="main_inner" class="grid_12">
+      <%= yield :main %>
+    </div>
+    <div class="clear"></div>
+    
+    
+    <div id="left" class="grid_8">
+      <%= yield %>
+    </div>
+    <div id="right" class="grid_4">
+      <ul id="big">
+        <li><%= link_to "New ticket", new_ticket_url, :class=>"big_ticket" %></li>
+        <li><%= link_to "Contact us", AppConfig['contact'], :class=>"big_contact" %></li>
+        <li><span id="find_label"><a href="javascript:;" onclick="show_find()" class="big_find">Find your ticket</a></span></li>
+        <% if current_user %>
+        <li><%= link_to "Clients", clients_url, :class=>"big_clients" %></li>
+        <li><%= link_to "Fresh tickets", fresh_tickets_url, :class=>"big_fresh" %></li>
+        <li><%= link_to "Active tickets", active_tickets_url, :class=>"big_active" %></li>
+        <li><%= link_to "All tickets", tickets_url, :class=>"big_all" %></li>
+        <li><span id="search_label"><a href="#" onclick="show_search()" class="big_search">Search tickets</a></span>
+            <span id="search_form"><% form_tag(tickets_url, {:method => 'get'}) do %>
+              <%= label :q, 'Search phrase' %>
+              <%= text_field_tag :q, 'Key / Name / Email', :size => 20 %>
+              
+              <%= label :start_on, 'Date range' %>
+          	  <%= text_field_tag :start_on, h(params[:start_on]), :size=>10 %> to 
+          	  <%= text_field_tag :end_on, h(params[:end_on]), :size=>10 %>
+          	  
+          	  <p><%= submit_tag "Search" %></p>
+              <% end %></span></li>
+        <% end %>
+      </ul>
+      <div id="find_form"><% form_tag(key_search_url, {:method => 'get'}) do %>
+        <%= text_field_tag :key, 'Ticket key', :size => 10 %>
+        <% end %>
+      </div>
+    </div>
+    <div class="clear"></div>
+  </div>
   
-  <div class="clear"></div>
   
-  
-  
-</div>
-<div id="footer">
-  <p>All information &copy; <%= Time.now.strftime('%Y') %> <%= AppConfig['company_name'] %> &bull; All rights reserved &bull; <%= current_user ? link_to('Log out', logout_url) :  link_to('Log in', login_url)%></p>
-</div>
+  <div id="footer" class="container_12">
+    <div class="grid_12">
+      <p>All information &copy; <%= Time.now.strftime('%Y') %> <%= AppConfig['company_name'] %> &bull; All rights reserved &bull; <%= current_user ? link_to('Log out', logout_url) :  link_to('Log in', login_url)%></p>
+    </div>    
+  </div>
 
 
 </body>
