--- a/app/views/help/view_by_key.html.erb
+++ b/app/views/help/view_by_key.html.erb
@@ -1,8 +1,18 @@
 <% content_for :head do %>
 <%= javascript_include_tag :fckeditor %>
 <% end %>
-<h2>Ticket <%=h @ticket.key %> <% if current_user %><span><%= link_to 'staff reply', ticket_url(@ticket) %></span><% end %></h2>
 
+<% if flash[:notice] %>
+<div id="notify">
+  <h2>Important</h2>
+  <h3>Email replies may get placed in your junk mail folder</h3>
+  <p>You should receive a confirmation email from <strong>help@bigfolio.com</strong> in just a moment. You'll also receive an email every time we reply to your ticket–generally within a few hours. If you don't see a confirmation email 
+    in your inbox, check your junk mail folder and be sure to allow emails from <strong>help@bigfolio.com</strong>. </p>
+</div>
+<% end %>
+
+
+<h2>Ticket <%=h @ticket.key %> <% if current_user %><span><%= link_to 'staff reply', ticket_url(@ticket) %></span><% end %></h2>
 <h3><%=h @ticket.subject %> <span>(<%=h @ticket.category.name %>)</span></h3>
 
 <div class="ticket_body">
