--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -23,10 +23,13 @@
       <%= f.text_field :domain %>
     </p>
     <p>
-      <%= f.label :mobile_number, "Mobile phone" %><br />
+      <%= f.label :mobile_number, "Mobile phone" %> <br />
       <%= f.text_field :mobile_number %>
     </p>
-    <p><%= carrier_select('ticket[carrier_name]', "Please choose your carrier") %></p>
+    <p>
+      <%= carrier_select('ticket[carrier_name]', "Please choose your carrier") %> <br />
+      <span class="tip">You'll get a text message when we reply to your ticket</span>
+    </p>
   </fieldset>
 
 
