--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -80,7 +80,9 @@
     
   </fieldset>
   
-  <p>
+      <%= recaptcha_tags %>
+  
+  <p style="margin-top:20px">
     <%= f.submit "Submit my request" %>
   </p>
 <% end %>
