--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 	<script type="text/javascript">
     jQuery(document).ready(function($) {
       $('a[rel*=facebox]').facebox({loading_image:'loading.gif',close_image:'closelabel.gif'});
+      <%= yield :onload %>
     })
     
     function show_find() {
