--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,14 @@
 
 	<title><%= AppConfig['company_name'] %></title>
 	
-	<%= stylesheet_link_tag 'bighelp' %>
-	<%= stylesheet_link_tag 'facebox' %>
+	<%= stylesheet_link_tag 'reset', 'text', '960', 'bighelp', 'facebox', 'superfish' %>
 	<%= javascript_include_tag :defaults %>
-	<%= javascript_include_tag 'facebox' %>
+	<%= javascript_include_tag 'facebox', 'superfish', 'jquery.qtip-1.0.0-rc3.min.js' %>
 	<%= yield :head %>
 	<script type="text/javascript">
     jQuery(document).ready(function($) {
       $('a[rel*=facebox]').facebox({loading_image:'loading.gif',close_image:'closelabel.gif'});
+      $("ul.sf-menu").superfish();
       <%= yield :onload %>
     })
     
@@ -40,74 +40,100 @@
 
 <body id="help">
 
-<div id="container">
-  <div id="header">
-    <div id="nav">
-      <ul>
-        <% AppConfig['nav_links'].each do |link| %>
-          <% link.each do |key, value| %>
-            <li><%= link_to key, value %></li>
-          <% end %>
-        <% end %>
-      </ul>
-      <% if current_user %>
-      <ul>
-        <li><%= link_to "categories", categories_url %></li>
-        <li><%= link_to "profile", profile_url %></li>
-        <li><%= link_to "log out", logout_url %></li>
-      </ul>
-      <% end %>
-    </div>    
-    <h1><%= link_to image_tag('logo.jpg'), root_url %></h1>
-  </div>
-  
-  <%= yield :main %>
-  
-  <div id="right">
-    
-    <ul id="big">
-      <li><%= link_to "New ticket", new_ticket_url, :class=>"big_ticket" %></li>
-      <li><%= link_to "Contact us", AppConfig['contact'], :class=>"big_contact" %></li>
-      <li><span id="find_label"><a href="javascript:;" onclick="show_find()" class="big_find">Find your ticket</a></span></li>
-      <% if current_user %>
-      <li><%= link_to "Fresh tickets", fresh_tickets_url, :class=>"big_fresh" %></li>
-      <li><%= link_to "Active tickets", active_tickets_url, :class=>"big_active" %></li>
-      <li><%= link_to "All tickets", tickets_url, :class=>"big_all" %></li>
-      <li><span id="search_label"><a href="#" onclick="show_search()" class="big_search">Search tickets</a></span>
-          <span id="search_form"><% form_tag(tickets_url, {:method => 'get'}) do %>
-            <%= label :q, 'Search phrase' %>
-            <%= text_field_tag :q, 'Key / Name / Email', :size => 20 %>
-            
-            <%= label :start_on, 'Date range' %>
-        	  <%= text_field_tag :start_on, h(params[:start_on]), :size=>10 %> to 
-        	  <%= text_field_tag :end_on, h(params[:end_on]), :size=>10 %>
-        	  
-        	  <p><%= submit_tag "Search" %></p>
-            <% end %></span></li>
-      <% end %>
-    </ul>
-    <div id="find_form"><% form_tag(key_search_url, {:method => 'get'}) do %>
-      <%= text_field_tag :key, 'Ticket key', :size => 10 %>
-      <% end %>
+  <div id="header_container">
+    <div id="header" class="container_12">
+      <div id="logo" class="grid_3">
+        <h1><%= link_to image_tag('logo-top.png', :alt => 'BIG Folio websites for photographers'), 'http://www.bigfolio.com' %></h1>
+      </div>
+      <div id="nav" class="grid_9">
+        <ul id="nav-menu" class="sf-menu">
+  				<li class="signup"><a href="http://www.bigfolio.com/signup/" title="Signup" class="signup first">Signup</a></li>
+  				<li><a href="http://www.bigfolio.com/websites/photography-website-designs/" title="Websites" class="products">Products</a>
+  				  <ul class="products-sub">
+  				    <li><a href="http://www.bigfolio.com/websites/photography-website-designs/">Websites</a></li>
+  				    <li class="b"><a href="http://www.bigfolio.com/photography-blog-themes">WordPress Blog Themes</a></li>
+  				    <li class="c"><a href="http://www.bigfolio.com/website-textures">Website Textures</a></li>
+  				    <li><a href="http://www.bigfolio.com/free-photography-tools-and-downloads/">Free Tools &amp; Downloads</a></li>
+  				    <li class="b"><a href="http://www.smallfolio.com">Small Folio for iPhone</a></li>
+  				    <li class="c"><a href="http://www.photographyseo.com">SEO DVD for Photographers</a></li>
+  				  </ul>
+  				</li>
+  				<li><a href="http://www.bigfolio.com/custom-website-design/" title="Services" class="services">Services</a>
+  				  <ul class="products-sub">
+  				    <li class="c"><a href="http://www.bigfolio.com/custom-website-design">Custom Web Design</a></li>
+  				    <li class="b"><a href="http://www.bigfolio.com/seo">SEO</a></li>
+  				    <li><a href="http://www.bigfolio.com/logo-design-for-professional-photographers">Logo Design</a></li>
+  				  </ul>
+  				</li>
+  				<li><a href="http://www.bfstop.com/" title="Blog" class="blog">Our Blog</a></li>
+  				<li><a href="http://www.bigfolio.com/about" title="Company" class="company">Company</a>
+  				  <ul class="company-sub">
+  				    <li class="b"><a href="http://www.bigfolio.com/about">About Us</a></li>
+  				    <li class="c"><a href="http://www.bigfolio.com/testimonials">Testimonials</a></li>
+  				    <li><a href="http://twitter.com/bigfolio">Twitter @bigfolio</a></li>
+  				  </ul>
+  				</li>
+  				<li><a href="http://www.bigfolio.com/contact/" title="Contact" class="contact">Contact</a></li>
+  				<li><a href="http://www.bigfolio.com/help/" title="Help" class="help">Help</a>
+  				  <ul class="help-sub">
+  				    <li class="b"><a href="http://www.bigfolio.com/help">BIG Folio Help Pages</a></li>
+  				    <li><a href="http://www.nextproof.com/help">NextProof Help</a></li>
+  				    <li class="c"><a href="http://bighelp.bigfolio.com">Submit a Support Ticket</a></li>
+  				  </ul>
+  				</li>
+  			</ul>
+      </div>
+      <div class="clear"></div>
     </div>
-    
-    
-    
-  </div>
-  <div id="left">
-    <%= yield %>
   </div>
   
   
-  <div class="clear"></div>
-  
-  
-  
-</div>
-<div id="footer">
-  <p>All information &copy; <%= Time.now.strftime('%Y') %> <%= AppConfig['company_name'] %> &bull; All rights reserved &bull; <%= current_user ? link_to('Log out', logout_url) :  link_to('Log in', login_url)%></p>
-</div>
+  <div id="content_container">
+    <div id="content" class="container_12">
+      <%= yield :main %>      
+      
+      <div class="grid_9" id="left">
+        <%= yield %>
+      </div>
+      <div class="grid_3" id="right">
+        <%= yield :sidebar %>
+        <ul id="big">
+          <li><%= link_to "New ticket", new_ticket_url, :class=>"big_ticket" %></li>
+          <li><%= link_to "Contact us", AppConfig['contact'], :class=>"big_contact" %></li>
+          <li><span id="find_label"><a href="javascript:;" onclick="show_find()" class="big_find">Find your ticket</a></span></li>
+          <% if current_user %>
+          <li><%= link_to "Fresh tickets", fresh_tickets_url, :class=>"big_fresh" %></li>
+          <li><%= link_to "Active tickets", active_tickets_url, :class=>"big_active" %></li>
+          <li><%= link_to "All tickets", tickets_url, :class=>"big_all" %></li>
+          <li><span id="search_label"><a href="#" onclick="show_search()" class="big_search">Search tickets</a></span>
+              <span id="search_form"><% form_tag(tickets_url, {:method => 'get'}) do %>
+                <%= label :q, 'Search phrase' %>
+                <%= text_field_tag :q, 'Key / Name / Email', :size => 20 %>
 
+                <%= label :start_on, 'Date range' %>
+            	  <%= text_field_tag :start_on, h(params[:start_on]), :size=>10 %> to 
+            	  <%= text_field_tag :end_on, h(params[:end_on]), :size=>10 %>
 
+            	  <p><%= submit_tag "Search" %></p>
+                <% end %></span></li>
+          <% end %>
+        </ul>
+        <div id="find_form"><% form_tag(key_search_url, {:method => 'get'}) do %>
+          <%= text_field_tag :key, 'Ticket key', :size => 10 %>
+          <% end %>
+        </div>
+      </div>
+      <div class="clear"></div>
+    </div>
+  </div>
+  
+  <div id="footer" class="container_12">
+    <div class="grid_12">
+      <p>All information &copy; <%= Time.now.strftime('%Y') %> <%= AppConfig['company_name'] %> &bull; All rights reserved &bull; <%= current_user ? link_to('Log out', logout_url) :  link_to('Log in', login_url)%></p>
+    </div>
+    <div class="clear"></div>
+  </div>
+  
+  
 </body>
 </html>
