--- a/public/stylesheets/bighelp.css
+++ b/public/stylesheets/bighelp.css
@@ -1,90 +1,42 @@
-/* These are the basic reset fonts styles (courtesy Yahoo! YUI) */
-html{color:#000;background:#DDD;height:100%;}
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}
-table{border-collapse:collapse;border-spacing:0;}
-fieldset,img{border:0;}
-address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}
-li{list-style:none;}
-caption,th{text-align:left;}
-h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}
-q:before,q:after{content:'';}
-abbr,acronym {border:0;font-variant:normal;}
-sup {vertical-align:text-top;}
-sub {vertical-align:text-bottom;}
-input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;}
-input,textarea,select{*font-size:100%;}
-legend{color:#000;}
-body {font:13px/1.231 'Trebuchet MS','Lucida Grande',Verdana,Arial,Sans-Serif;*font-size:small;*font:x-small;}
-table {font-size:inherit;font:100%;}
-pre,code,kbd,samp,tt{font-family:monospace;*font-size:108%;line-height:100%;}
-a, a:link, a:visited {color:#0066CC;}
-/* End of reset fonts */
-
-
-
-
-
-body#help {
-	background: #DDD url(../images/site_bg.png) repeat-x fixed top left;
+body {
+	font-size: 62.5%; /* Resets 1em to 10px */
+	font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif;
+	color: #333;
+	background: #ffffff;
 }
 div.clear {
 	clear:both;
 }
-div#container {
-	background: #fff;
-	width:930px;
-	min-height:550px;
-	margin:0 auto;
-	border-left:3px solid #EEE;
-	border-right:3px solid #EEE;
+
+#header_container {
+	margin-top:50px;
 }
-div#header {
-	width:930px;
-	margin:0 5px;
-	height:70px;
+
+#main {
+	border-bottom:1px solid #ccc;
+	margin-bottom:50px;
 }
-div#header h1 {
-	color:#fff;
-	line-height:50px;
-	margin:0 12px;
-	font-size:2.4em;
-	-x-system-font:none;
-	font-stretch:normal;
+#main h1, #main h2 {
+	font-weight:normal;
 }
-div#header h1 a, div#header h1 a:link, div#header h1 a:visited {
-	color:#fff;
-	font-weight:bold;
+#main h1 {
+	margin:50px 0 20px 0;
+}
+#main h2 {
+	color:#aaa;
+	font-size:1.5em;
+}
+#main h2 a.splash_ticket {
+	background: transparent url(../images/new.png) no-repeat center left;
+	height:48px;
+	padding-left:60px;
+	display:block;
+	line-height:48px;
+	color:#999;
 	text-decoration: none;
-}
-div#nav {
-	float:right;
-	margin:12px 12px 0 0;
-}
-div#nav li {
-	display: block;
-	float:left;
-	margin-right:12px;
-	padding:6px 12px;
-	font-size:1em;
-	line-height:13px;
-}
-div#nav li a, div#nav li a:link, div#nav li a:visited {
-	color:#555;
-	text-decoration:none;
+	font-size:1.5em;
 }
 
-div#splash {
-	width:880px;
-	margin:0 auto 24px auto;
-}
-
-div#left {
-	width:600px;
-	margin:0 12px 0 24px;
-}
-div#left p {
-	padding-bottom:6px;
-}
 div#left h1, div#left h2 {
 	color:#333;
 	font-size:1.5em;
@@ -106,9 +58,10 @@ div#left h3 {
 }
 div#left ul {
 	margin:12px 0 0 6px;
+	list-style-type: none;
 }
 div#left li {
-	list-style: disc inside;
+	list-style-type: none;
 	line-height:1.5em;
 }
 
@@ -249,11 +202,8 @@ div#left ul.ticket_info li {
 div#left ul.ticket_info li a {
 	color:#0066CC;
 }
-
-div#right {
-	width:240px;
-	float:right;
-	padding:24px 0 0 12px;
+ul#big, ul#big li {
+	list-style-type: none;
 }
 ul#big a, ul#big a:link, ul#big a:visited {
 	text-decoration: none;
@@ -323,22 +273,8 @@ div.pagination {
 
 
 div#footer {
-	background: #fff;
-	width:930px;
-	height:40px;
-	margin:0 auto;
-	color:#666;
-	font-size: .8em;
 	text-align:center;
-	border-left:3px solid #EEE;
-	border-right:3px solid #EEE;
-	border-bottom:3px solid #EEE;	
 }
-div#footer p {
-	padding:6px 12px;
-}
-
-
 /************************************************/
 /* Errors
 /************************************************/
