fixed signup link in header nave

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
       </div>
       <div id="nav" class="grid_9">
         <ul id="nav-menu" class="sf-menu">
-  				<li class="signup"><a href="http://www.bigfolio.com/signup/" title="Signup" class="signup first">Signup</a></li>
+  				<li class="signup"><a href="http://bigfolio.com/websites/photography-website-designs/" title="Signup" class="signup first">Signup</a></li>
   				<li><a href="http://www.bigfolio.com/websites/photography-website-designs/" title="Websites" class="products">Products</a>
   				  <ul class="products-sub">
   				    <li><a href="http://www.bigfolio.com/websites/photography-website-designs/">Websites</a></li>
