layout update for apf

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,45 +43,10 @@
   <div id="header_container">
     <div id="header" class="container_12">
       <div id="logo" class="grid_3">
-        <h1><%= link_to image_tag('logo-top.png', :alt => 'BIG Folio websites for photographers'), 'http://www.bigfolio.com' %></h1>
+        <h1><%= link_to image_tag('http://aphotofolio.com/wp-content/bizz_uploads/4-logo_copy.png', :alt => 'A Photo Folio'), 'http://www.aphotofolio.com' %></h1>
       </div>
       <div id="nav" class="grid_9">
-        <ul id="nav-menu" class="sf-menu">
-  				<li class="signup"><a href="http://bigfolio.com/websites/photography-website-designs/" title="Signup" class="signup first">Signup</a></li>
-  				<li><a href="http://www.bigfolio.com/websites/photography-website-designs/" title="Websites" class="products">Products</a>
-  				  <ul class="products-sub">
-  				    <li><a href="http://www.bigfolio.com/websites/photography-website-designs/">Websites</a></li>
-  				    <li class="b"><a href="http://www.bigfolio.com/photography-blog-themes">WordPress Blog Themes</a></li>
-  				    <li class="c"><a href="http://www.bigfolio.com/website-textures">Website Textures</a></li>
-  				    <li><a href="http://www.bigfolio.com/free-photography-tools-and-downloads/">Free Tools &amp; Downloads</a></li>
-  				    <li class="b"><a href="http://www.smallfolio.com">Small Folio for iPhone</a></li>
-  				    <li class="c"><a href="http://www.photographyseo.com">SEO DVD for Photographers</a></li>
-  				  </ul>
-  				</li>
-  				<li><a href="http://www.bigfolio.com/custom-website-design/" title="Services" class="services">Services</a>
-  				  <ul class="products-sub">
-  				    <li class="c"><a href="http://www.bigfolio.com/custom-website-design">Custom Web Design</a></li>
-  				    <li class="b"><a href="http://www.bigfolio.com/seo">SEO</a></li>
-  				    <li><a href="http://www.bigfolio.com/logo-design-for-professional-photographers">Logo Design</a></li>
-  				  </ul>
-  				</li>
-  				<li><a href="http://www.bfstop.com/" title="Blog" class="blog">Our Blog</a></li>
-  				<li><a href="http://www.bigfolio.com/about" title="Company" class="company">Company</a>
-  				  <ul class="company-sub">
-  				    <li class="b"><a href="http://www.bigfolio.com/about">About Us</a></li>
-  				    <li class="c"><a href="http://www.bigfolio.com/testimonials">Testimonials</a></li>
-  				    <li><a href="http://twitter.com/bigfolio">Twitter @bigfolio</a></li>
-  				  </ul>
-  				</li>
-  				<li><a href="http://www.bigfolio.com/contact/" title="Contact" class="contact">Contact</a></li>
-  				<li><a href="http://www.bigfolio.com/help/" title="Help" class="help">Help</a>
-  				  <ul class="help-sub">
-  				    <li class="b"><a href="http://www.bigfolio.com/help">BIG Folio Help Pages</a></li>
-  				    <li><a href="http://www.nextproof.com/help">NextProof Help</a></li>
-  				    <li class="c"><a href="http://bighelp.bigfolio.com">Submit a Support Ticket</a></li>
-  				  </ul>
-  				</li>
-  			</ul>
+        &nbsp;
       </div>
       <div class="clear"></div>
     </div>
