changing emails to apf

--- a/app/views/help/contact.html.erb
+++ b/app/views/help/contact.html.erb
@@ -2,7 +2,7 @@
 
 <h2>Pre-Sales Questions</h2>
 
-<p>Considering a BIG Folio website or NextProof account? Please use our <%= link_to 'pre-sales contact form', 'http://bigfolio.com/contact/' %> for questions about our products and services. </p>
+<p>Considering an A Photo Folio website? Please <%= link_to 'email or call us', 'http://aphotofolio.com/contact/' %> for questions about our products and services. </p>
 
 <h2>Email Support</h2>
 <p>For the quickest response, please <%= link_to 'submit a support ticket', new_ticket_url %>. Tickets are routed to multiple staff members and replies are emailed to you and visible in your browser.</p>
@@ -10,5 +10,5 @@
 <p>Our normal support hours are 8:30am to 5pm Pacific Time, Monday through Friday.</p>
 <p>Tickets submitted during evenings and weekends will receive a response the next business day. Emergency requests (e.g. site or email down) will be addressed as soon as possible.</p>
 <h2>Phone Support</h2>
-<p>Phone support is available Monday to Friday: 8:30am-5pm (Pacific Time)</p>
-<h3>Phone: (805) 504-1126 ext. 3</h3>
+<p>Phone support is available Monday to Friday: 8:30am-5pm (Mountain Time)</p>
+<h3>Phone: (917) 512-5335</h3>
