--- a/app/views/ticket_mailer/ticket_update.rhtml
+++ b/app/views/ticket_mailer/ticket_update.rhtml
@@ -12,4 +12,4 @@
 <h3>Original message</h3>
 <%= @ticket.body %>
 <hr />
-<h3><%= link_to 'View and reply to this ticket', ticket_url(@ticket, :host => 'bighelp.bigfolio.com') %></h3>
+<h3><%= link_to 'View and reply to this ticket', ticket_url(@ticket, :host => 'help.aphotofolio.com') %></h3>
