--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -13,7 +13,7 @@
 <div class="clear"></div>
 <% end %>
 <h2>Guidelines for Submitting a Support Ticket</h2>
-<p>At BIG Folio, our goal is to provide you with the best support in the industry. Our online support center allows us to effectively handle your requests. Please submit a ticket any time you need us to take action. For example:</p>
+<p>At A Photo Folio, our goal is to provide you with the best support in the industry. Our online support center allows us to effectively handle your requests. Please submit a ticket any time you need us to take action. For example:</p>
 <ul>
 	<li>If you need to upgrade or downgrade your account</li>
 	<li>If you are having problems with your PayPal account</li>
@@ -24,7 +24,7 @@
 	<li>You would like to switch site templates</li> 
 </ul>
 <h2>Common Questions</h2>
-<p>Many answers to common questions can be found in our <a href="http://bigfolio.com/help/">help pages</a>.
+<p>Many answers to common questions can be found in our <a href="http://apfmanual.com/">help pages</a>.
 
 </p>
 <h2>Third Party Applications</h2>
