more updates to show apf site and email

--- a/app/views/help/view_by_key.html.erb
+++ b/app/views/help/view_by_key.html.erb
@@ -6,8 +6,8 @@
 <div id="notify">
   <h2>Important</h2>
   <h3>Email replies may get placed in your junk mail folder</h3>
-  <p>You should receive a confirmation email from <strong>help@bigfolio.com</strong> in just a moment. You'll also receive an email every time we reply to your ticket–generally within a few hours. If you don't see a confirmation email 
-    in your inbox, check your junk mail folder and be sure to allow emails from <strong>help@bigfolio.com</strong>. </p>
+  <p>You should receive a confirmation email from <strong>help@aphotofolio.com</strong> in just a moment. You'll also receive an email every time we reply to your ticket–generally within a few hours. If you don't see a confirmation email 
+    in your inbox, check your junk mail folder and be sure to allow emails from <strong>help@aphotofolio.com</strong>. </p>
 </div>
 <% end %>
 
