splash image update for apf

--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -6,7 +6,7 @@
     <h2><%= link_to "Submit a new ticket", new_ticket_url, :class=>"splash_ticket" %></h2>
   </div>
   <div id="splash" class="grid_6 omega">
-    <%= image_tag 'splash.jpg' %>
+    <%= image_tag 'http://aphotofolio.com/wp-content/themes/berita/thumb.php?src=http://aphotofolio.com/wp-content/uploads/2009/12/AntoninKratochvil-D5.jpg&h=250&w=366&zc=1&q=80' %>
   </div>
   <div class="clear"></div>
 </div>
