splash image update for apf

--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :main do %>
 <div class="grid_12" id="main">
   <div class="grid_6 alpha">
-    <h1>The Best Support in The Industry</h1>
+    <h1>Get Help with Your A Photo Folio Site</h1>
       
     <h2><%= link_to "Submit a new ticket", new_ticket_url, :class=>"splash_ticket" %></h2>
   </div>
