--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -13,16 +13,17 @@
 <div class="clear"></div>
 <% end %>
 <h2>Guidelines for Submitting a Support Ticket</h2>
-<p>At A Photo Folio, our goal is to provide you with the best support in the industry. Our online support center allows us to effectively handle your requests. Please submit a ticket any time you need us to take action. For example:</p>
-<ul>
-	<li>If you need to upgrade or downgrade your account</li>
-	<li>If you are having problems with your PayPal account</li>
 
-	<li>If you need to create additional email accounts or aliases</li>
-	<li>Your email will not send or receive</li>
-	<li>You would like a quote for custom development or design work</li>
-	<li>You would like to switch site templates</li> 
+<p>At A Photo Folio, our goal is to provide you with the best support in the industry. Our online support center allows us to effectively handle your requests. Please submit a ticket any time you need us to take action. For example:</p>
+
+<ul>
+  <li>If you have a question and can't find the answer in <a href="http://apfmanual.com/">the manual</a></li>
+  <li>If something is not working right on your website             </li>
+  <li>If you find a bug in the software                             </li>
+  <li>Your email will not send or receive                           </li>
+  <li>You would like to switch designs                              </li>
 </ul>
+
 <h2>Common Questions</h2>
 <p>Many answers to common questions can be found in our <a href="http://apfmanual.com/">help pages</a>.
 
