updating links for migration to ZD

--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -3,7 +3,7 @@
   <div class="grid_6 alpha">
     <h1>The Best Support in The Industry</h1>
       
-    <h2><%= link_to "Submit a new ticket", new_ticket_url, :class=>"splash_ticket" %></h2>
+    <h2><%= link_to "Submit a new ticket", "http://support.bigfolio.com/anonymous_requests/new", :class=>"splash_ticket" %></h2>
   </div>
   <div id="splash" class="grid_6 omega">
     <%= image_tag 'splash.jpg' %>
@@ -12,22 +12,7 @@
 </div>
 <div class="clear"></div>
 <% end %>
-<h2>Guidelines for Submitting a Support Ticket</h2>
-<p>At BIG Folio, our goal is to provide you with the best support in the industry. Our online support center allows us to effectively handle your requests. Please submit a ticket any time you need us to take action. For example:</p>
-<ul>
-	<li>If you need to upgrade or downgrade your account</li>
-	<li>If you are having problems with your PayPal account</li>
-
-	<li>If you need to create additional email accounts or aliases</li>
-	<li>Your email will not send or receive</li>
-	<li>You would like a quote for custom development or design work</li>
-	<li>You would like to switch site templates</li> 
-</ul>
-<h2>Common Questions</h2>
-<p>Many answers to common questions can be found in our <a href="http://bigfolio.com/help/">help pages</a>.
-
-</p>
-<h2>Third Party Applications</h2>
-<p>Photographers use hundreds of applications for imaging and productivity. Unfortunately, we cannot support all of them. If you are experiencing problems with a third-party application, please perform some rudimentary web searches and attempt to contact the vendor through their support channels. If you have exhausted these methods with no success, submit a ticket and we'll try to help.</p> 
-<h2>What Happens When You Submit a Ticket</h2>
-<p>When a ticket is submitted, you'll immediately see a confirmation screen and receive an email. Both will contain a <strong>ticket key</strong>: a special key you can use to access your request in the future. Your request is immediately routed to multiple staff members. Any time we provide an update to your request, you'll also receive an email.</p>
+<h2>Our Support System Has Moved</h2>
+<p>We recently launched a new support ticket system at <a href="http://support.bigfolio.com">support.bigfolio.com</a>. 
+  You can still view and reply to existing tickets here for the next 30 days. </p>
+<h2><a href="http://support.bigfolio.com">Visit support.bigfolio.com</a></h2>
