--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,7 +98,7 @@
       <div class="grid_3" id="right">
         <%= yield :sidebar %>
         <ul id="big">
-          <li><%= link_to "New ticket", new_ticket_url, :class=>"big_ticket" %></li>
+          <li><%= link_to "New ticket", "http://support.bigfolio.com/anonymous_requests/new", :class=>"big_ticket" %></li>
           <li><span id="find_label"><a href="javascript:;" onclick="show_find()" class="big_find">Find your ticket</a></span></li>
           <% if current_user %>
           <li><%= link_to "Fresh tickets", fresh_tickets_url, :class=>"big_fresh" %></li>
