--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -18,7 +18,7 @@
 
 <div id="nav">    
     <ul class="big">
-      <li><%= link_to "New Ticket", new_ticket_url, :class=>"big_ticket" %></li>
+      <li><%= link_to "New Ticket", "http://support.bigfolio.com/anonymous_requests/new", :class=>"big_ticket" %></li>
       <li><%= link_to "Contact", AppConfig['contact'], :class=>"big_contact" %></li>
       <li><a href="#search" class="big_find">Search</a></li>
     </ul>
